createda homecontroller, and changed few lines

--- a/room-service/src/main/resources/templates/list-rooms.html
+++ b/room-service/src/main/resources/templates/list-rooms.html
@@ -12,7 +12,7 @@
   <ul id="room-list">
     <!-- This will be populated with available rooms from your backend -->
   </ul>
-  <a href="/create">Create a New Room</a> <!-- Link to create a room -->
+  <a th:href="@{/rooms/create}">Create a New Room</a>
 </div>
 
 <script>
