--- a/room-service/src/main/resources/templates/style.css
+++ b/room-service/src/main/resources/templates/style.css
@@ -1,6 +1,6 @@
 body {
     font-family: Arial, sans-serif;
-    background-color: #f4f4f4;
+    background-color: #bd6262;
     margin: 0;
     padding: 20px;
 }
@@ -9,7 +9,7 @@ body {
     max-width: 500px;
     margin: auto;
     padding: 20px;
-    background: white;
+    background: #cf5959;
     border-radius: 8px;
     box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
 }
@@ -32,7 +32,7 @@ input[type="text"],
 select {
     width: 100%;
     padding: 10px;
-    border: 1px solid #ccc;
+    border: 1px solid rgba(64, 142, 70, 0.31);
     border-radius: 4px;
 }
 
